Step 7 - debbug problem